<resources>
    <string name="app_name">Popular Movies</string>
    <string name="splash_icon_desc">Popular Movies icon</string>
    <string name="refresh">Refresh</string>
    <string name="most_popular">Most Popular</string>
    <string name="movie_image">Movie Image</string>
    <string name="title_activity_movie_details">Movie Details</string>

    <string name="action_settings">Settings</string>
    <string name="movie_detail_poster">Movie Detail Poster</string>
    <string name="movie_banner_image">Movie Banner Image</string>
    <string name="movie_release_date">Movie Release date</string>
    <string name="synopsis">Synopsis</string>


    <!--Keys used-->
    <string name="page_key" translatable="false">page</string>
    <string name="result_key" translatable="false">result data</string>
    <string name="poster_image_transition" translatable="false">poster_image</string>
    <string name="popularity">Popularity Desc</string>
    <string name="rating_star">Rating star</string>
    <string name="result_null_message">Unable to show Try Again!!</string>
    <string name="seems_you_lose_the_internet_connection">Seems you lose the Internet Connection.</string>
    <string name="swipe_to_refresh">Swipe To Refresh</string>
    <string name="error_401">Invalid API key: You must be granted a valid key.</string>
    <string name="error_404">The resource you requested could not be found.</string>
    <string name="unknown_error">Unknown Error Try Again!!</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="something_went_wrong">Something Went Wrong Try Again!!</string>
    <string name="look_before_you_watch">Look before you watch</string>
    <string name="total_vote">Vote(%s)</string>
    <string name="scaleX" translatable="false">scaleX</string>
    <string name="scaleY" translatable="false">scaleY</string>
    <string name="alpha" translatable="false">alpha</string>
    <string name="tab_title_details">Details</string>
    <string name="tab_title_trailers">Trailers</string>
    <string name="tab_title_reviews">Reviews</string>
    <string name="movie_bundle_key" translatable="false">movie_bundle</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="author_name">Author</string>
    <string name="view_more">View More</string>
    <string name="view_less">View Less</string>
    <string name="no_reviews">No Reviews Found</string>
    <string name="trailer_items">Trailer Items</string>
    <string name="play_trailer_on_a_youtube">Play Trailer on a youtube</string>
    <string name="trailer_name">Trailer Name</string>
    <string name="no_trailer_founds">No Trailer Found</string>
    <string name="no_app_found_to_view">No App found for this</string>
    <string name="favorite">Favorite</string>
    <string name="unable_to_save_your_fav_movies">Unable to save your choice try again!!!</string>
    <string name="favorite_movie">Favorite Movies</string>
    <string name="fav_movie_key" translatable="false">fav_movie_key</string>
    <string name="unable_to_unfav">Unable to make Unfavorite. Please Try again later!!</string>
    <string name="no_fav_movies">No Favorite movie found</string>
    <string name="share_icon">share</string>

    <string name="recycler_scroll_position_key">rv_scroll_position</string>

</resources>
