<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/poster_height"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/card_margin_image"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation"
    app:cardUseCompatPadding="true"
    >



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/trailer_thumb_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:contentDescription="@string/trailer_items"
            android:src="@drawable/ic_place_holder"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/play_trailer_on_a_youtube"
            android:src="@drawable/ic_play_arrow_black_24dp"/>

        <TextView
            android:id="@+id/trailer_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            tools:text="@string/trailer_name"
            android:textColor="@color/colorHomeBackground"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"/>

        <ImageButton
            android:id="@+id/shared_ib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/share_icon"
            android:src="@drawable/ic_share_black_24dp"/>
    </RelativeLayout>



</androidx.cardview.widget.CardView>