<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SplashActivity">

    <!--This view show the app icon on splash screen-->
    <ImageView
        android:id="@+id/splash_icon_iv"
        android:layout_width="@dimen/splash_icon"
        android:layout_height="@dimen/splash_icon"
        android:contentDescription="@string/splash_icon_desc"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/splash_icon"/>

    <!--This view show the app name-->
    <TextView
        android:id="@+id/app_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/app_name_margin"
        android:layout_marginStart="@dimen/app_name_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:fontFamily="monospace"
        android:text="@string/app_name"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash_icon_iv"/>

    <TextView
        android:id="@+id/extra_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:fontFamily="sans-serif"
        android:text="@string/look_before_you_watch"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:alpha="0.0"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>