<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/nested_scroll_view"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.MovieDetailsActivity"
    tools:showIn="@layout/activity_movie_details"
    android:padding="@dimen/content_padding">

    <!--This is main parent single child layout-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <!--Text view to show the description of movie-->
        <TextView
            android:id="@+id/overview_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:gravity="start"
            android:textAlignment="textStart"
            android:textSize="@dimen/text_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overview_tv"
            tools:text="The Description of a value is much more  keyword you have to keep this dta is below"/>

        <!--Description value text view-->
        <TextView
            android:id="@+id/overview_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/synopsis"
            android:textAlignment="viewStart"
            android:textAppearance="@android:style/TextAppearance.Widget.TextView"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poster_image_cv"/>

        <!--Card view to show the poster of a movie-->
        <androidx.cardview.widget.CardView
            android:id="@+id/poster_image_cv"
            android:layout_width="@dimen/detail_cardview_width"
            android:layout_height="@dimen/detail_cardview_height"
            android:layout_marginTop="@dimen/text_margin"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_elevation"
            app:cardUseCompatPadding="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/movie_poster_iv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_place_holder"
                android:contentDescription="@string/movie_detail_poster"
                android:scaleType="fitXY"
                android:transitionName="@string/poster_image_transition"/>
        </androidx.cardview.widget.CardView>

        <!--Text view for movie title-->
        <TextView
            android:id="@+id/movie_title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:maxLines="5"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/poster_image_cv"
            app:layout_constraintTop_toTopOf="@+id/poster_image_cv"
            tools:text="Movie Title is very big and large"/>

        <!--Text view for movie Release date-->
        <TextView
            android:id="@+id/movie_release_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:fontFamily="sans-serif-condensed"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorText"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/poster_image_cv"
            app:layout_constraintTop_toBottomOf="@+id/movie_title_tv"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/movie_release_date"/>

        <!--Rating image view-->
        <ImageView
            android:id="@+id/movie_rating_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/iv_margin_top"
            android:contentDescription="@string/rating_star"
            android:src="@drawable/ic_star_black_24dp"
            app:layout_constraintStart_toEndOf="@+id/poster_image_cv"
            app:layout_constraintTop_toBottomOf="@+id/movie_release_date_tv"/>

        <!--Rating marks-->
        <TextView
            android:id="@+id/vote_count_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:textAlignment="viewStart"
            app:layout_constraintStart_toEndOf="@+id/rating_tv"
            app:layout_constraintTop_toBottomOf="@+id/movie_release_date_tv"
            tools:text="(14000)"/>

        <!--Popularity image-->
        <ImageView
            android:contentDescription="@string/popularity"
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/iv_margin_top"
            app:layout_constraintStart_toEndOf="@+id/poster_image_cv"
            app:layout_constraintTop_toBottomOf="@+id/movie_rating_iv"
            app:srcCompat="@drawable/ic_thumb_up_black_24dp"/>

        <!--Popularity count text view-->
        <TextView
            android:id="@+id/popularity_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:textAlignment="viewStart"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/movie_rating_iv"
            tools:text="Popularity"/>

        <!--Rating count Text view.-->
        <TextView
            android:id="@+id/rating_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:textColor="@color/colorBlack"
            app:layout_constraintStart_toEndOf="@+id/movie_rating_iv"
            app:layout_constraintTop_toBottomOf="@+id/movie_release_date_tv"
            tools:text="Ratings"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>